import "client.comm.proto";
import "client.family.proto";
package client;

enum CITY_OPT_ERR_NO_E
{
	SUCCESS					 = 0;	// 操作成功
	SIEGE_PROCEED			 = 1;	// 攻城活动已经开启
	KING_LIMIT				 = 2;	// 不是国王
	NAME_EXIST				 = 3;	// 名字已经存在
	NAME_TOO_LONG			 = 4;	// 名字太长
	SIEGE_CLOSED			 = 5;	// 攻城活动已经关闭
	ALREADY_ENTERED			 = 6;	// 已经在场景中
	LV_LIMIT				 = 7;	// 等级不足
	FAMILY_LIMIT			 = 8;	// 没有加入军团
	OFFICIAL_LIMIT			 = 9;	// 没有担任军团职位
	REWARD_GOT				 = 10;	// 奖励已经领取
	BAG_LIMIT				 = 11;	// 背包格子不足
	CHIEF_LIMIT				 = 12;	// 不是军团长
	OCCUPY_REPEAT			 = 13;	// 重复占领
	MONEY_LIMIT				 = 14;	// 钱不足
	SIEGE_NOT_CLOSED		 = 15;	// 攻城活动未结束
	TIME_LIMIT				 = 16;	// 国号今天已经修改
	ROLE_DEAD				 = 17;	// 人物死亡
	CD_TIME					 = 18;	// 冷却中
	NAME_MUST_CHINESE		 = 19;	// 名字必须是中文
	ILLEGAL_WORD			 = 20;	// 有非法字符
	FAILURE					 = 21;	// 失败
}

message official_info
{
	required uint32 role_id = 1;
	required string role_name = 2;
	required uint32 pos = 3;
	required uint32 sex = 4;
	required string model_id = 5;
}

// 王城界面信息
message city_info_req
{
	required uint32 role_id = 1;
	optional server_head svr_head = 1000;
}

message city_info_rsp
{
	required bool	modify = 1[default = false]; // 是否可改国号
	required uint32 open_time = 2;				 // 活动开启时间
	required uint32 last = 3;					 // 持续时间(s)
	repeated official_info oi = 4;				 // 成员列表
	optional uint32 timelong = 5;				 // 占领时长
	optional string family_name = 6;			 // 占领军团
	optional string title = 7;					 // 国号
}

// 修改国号
message city_mod_title_req
{
	required string city_title = 1;					// 国号
	optional server_head svr_head = 1000;
}

message city_mod_title_rsp
{
	required CITY_OPT_ERR_NO_E err_no = 1;
}

// 王城奖励信息
message city_welfare_info_req
{
	required uint32 role_id = 1;
	optional server_head svr_head = 1000;
}

message city_pos_reward
{
	required uint32 pos = 1;
	required uint32 id = 2;		// 物品ID
	required uint32 num = 3;	
}

message city_welfare_info_rsp
{
	required uint32 pos = 1;		// 0 无王都军团职位
	repeated city_pos_reward cpr = 2;
	optional uint32 status = 3;		// 1 已领取 0 未领取
}

// 领取王城奖励 
message city_welfare_get_req
{
	required uint32 role_id = 1;
	optional server_head svr_head = 1000;
}

message city_welfare_get_rsp
{
	required CITY_OPT_ERR_NO_E err_no = 1;
}

// 发放王城奖励(服务器内部使用)
message city_welfare_get_notify
{
	required uint32 role_id = 1;
	required uint32 props_id = 2;
	required int32	num = 3;
}

// 进入战场
message siege_enter_req
{
    required uint32      unixtime = 1;
	optional server_head svr_head = 1000;
}

message siege_enter_rsp
{
    enum RET {
        SUCCESS      = 0;  // 成功
		FAILURE		 = 1;  // 失败
        SCENE_CLOSED = 2;
    }
    required RET ret = 1;
}

message siege_enter_field
{
	required uint32 role_id = 1;
}

message siege_scene_camp_req
{
	required uint32 time = 1;
	optional server_head svr_head = 1000;
}

message siege_scene_camp
{
	required uint32 camp = 1;			// 0 防 1 攻 2中立
	required uint32 open_time = 2;		// 开启时间
	optional string family_name = 3;	// 占旗军团
	optional string user_name = 4;		// 占旗者
	optional uint32 occupy_time = 5;	// 占旗时间
}

// 玩家死亡弹窗
message siege_dead_msg_rsp
{
	required string user_name = 1;
	required string family_name = 2;
}

// 复活
message siege_revive_req
{
	required uint32 unixtime = 1;
	optional server_head svr_head = 1000;
}

message siege_revive_rsp
{
	required uint32 unixtime = 1;
}

// 攻城战状态
message siege_status
{
	required uint32 role_id = 1;
}

message siege_status_rsp
{
	/*0 关闭
	 *1 可进入
	 *3 开启
	 */
	required uint32 status = 1;
}


// (服务器内部使用)
message siege_personal_info
{
	required uint32 role_id = 1;
	required string user_name = 2;
	required uint32 tick = 3;			// 在战场中的累计时间
//	required uint32 status = 4;			// 当前是否在场景中	0 否
	required uint32 cur_combo = 4;		// 当前连杀数
	required uint32 exp = 5 [default = 0];			// 经验值
	required uint32 region = 6;			// 当前所在经验区
	required uint32 timelong = 7 [default = 0];		// 处于当前经验区时长
}

// (服务器内部使用)
message siege_over
{
	required uint32 family_id = 1;
	required uint32 msg_id = 2;
	repeated uint32 role = 3;
}

// (服务器内部使用)
message siege_skill_modify
{
	required uint32 role_id = 1;
	repeated uint32 id = 2;
	required uint32 op = 3;
}

message king_skill_add
{
	required uint32 role_id = 1;
	required uint32 family_id = 2;
}

// 随机传送弹窗
message siege_random_trans
{
	required uint32 unixtime = 1;
}

// (服务器内部使用)
message siege_flag_occupy
{
	required uint32 old_family_id = 1;
	required uint32 new_family_id = 2;
}

// 服务器内部使用
message city_welfare_get_confirm
{
	required uint32 role_id = 1;
}

message siege_call_info
{
	required uint32 family_id = 1;
}

// 发起召唤
message siege_call_req
{
	required uint32 time = 1;
	optional server_head svr_head = 1000;
}

message siege_call_rsp
{
	required CITY_OPT_ERR_NO_E err_no = 1;
}

// 接受召唤
message siege_call_accept_req
{
	required uint32 family_id = 1;
	optional server_head svr_head = 1000;
}

message siege_call
{
	required uint32 role_id = 1;
	required uint32 chief = 2;
}

message siege_call_accept_rsp
{
	enum RET {
		SUCCESS			= 0;	// 成功
		TIMEOUT			= 1;	// 超时
		OUTSIDE			= 2;	// 本人不在攻城战场
		KING_OUTSIDE	= 3;	// 军团长不在攻城战场
		NO_FAMILY		= 4;	// 没有军团
		MY_CALL			= 5;	// 不能接受本人召唤
		DEAD			= 6;	// 死亡
	}
    required RET ret = 1;
}

// 召集军团成员图标
// 收到此协议表示当前可召唤军团成员
message siege_call_status
{
	required uint32 time = 2;		// 召唤冷却时间
}

// 个人信息
message siege_personal_info_req
{
	required uint32 role_id = 1;
	optional server_head svr_head = 1000;
}

message siege_personal_info_rsp
{
	required uint32 region = 1;		// 区域
	required uint32 exp = 2;		// 累计经验
	required uint32 time = 3;		// 累计时间
	required uint32 add = 4;		// 单位时间获得经验
}

message siege_field_open
{
	required uint32 time = 1;
}

message siege_start
{
	required uint32 open_time = 1;
	required uint32 close_time = 2;
	optional uint32 family_id = 3;
	optional uint32 occupy_time = 4;
	repeated family_simple_info fsi = 5;
}

message siege_broadcast_msg
{
	required string id = 1;
}

message update_sculpture
{
	required uint32 role_id = 1;
	required string king = 2;
	required string title = 3;
	required string family_name = 4;
}

message kingdom_sculpture_info
{
	required uint32 role_id = 1;	// npc id
	required string king = 2;		// 国王名
	required string title = 3;		// 国号
	required uint64 inst_id = 4;	// npc 实例ID
	required uint32 x = 5;
	required uint32 y = 6;
	required string family_name = 7;	// 军团名字
}

message kingdom_sculpture
{
	repeated kingdom_sculpture_info ksi = 1;
}
